<resources>
    <string name="app_name">NutproMobile</string>
    <string name="title_training">Trening</string>
    <string name="title_trainings_history">Historia</string>
    <string name="title_profile">Profil</string>
    <string name="title_more">More</string>
    <string name="login_title_first_name">Imię</string>
    <string name="login_title_last_name">Nazwisko</string>
    <string name="login_title_age">Wiek</string>
    <string name="login_title_height">Wzrost</string>

    <string name="label_training_fragment_distance">Dystans</string>
    <string name="label_training_fragment_timer">Czas</string>
    <string name="label_training_fragment_start_time">Czas rozpoczęcia</string>
    <string name="label_training_fragment_stop_time">Czas zakończenia</string>
    <string name="label_training_fragment_speed">Prędkość</string>
    <string name="label_training_fragment_average_speed">Srednia prędkość</string>
    <string name="label_training_fragment_data">Dane</string>
    <string name="label_training_fragment_tpe">Typ treningu</string>

</resources>
